--- a/index.html
+++ b/index.html
@@ -92,7 +92,18 @@
 
     </main>
 
-    <footer class="container flex_centr">
+    <footer class="container">
+        <div class="smm flex_centr">
+            <img src="image/vk.png" alt="vk">
+            <img src="image/vk.png" alt="vk">
+            <img src="image/vk.png" alt="vk">
+            <img src="image/vk.png" alt="vk">
+        </div>
+        <div class="info">
+            <p>ИП Иванов Иван Иванович</p>
+            <p>ОГРН 123456789012345</p>
+            <p>ИНН 6268293456</p>
+        </div>
     </footer>
 
 </body>
