--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header class="container">
         <div class="text">
             <div class="logo"><p>Logotip</p></div>
-            <div class="name"><p>Магазин<br>и музей Яндекса</p></div>
+            <div class="name"><p>Интернет магазин<br>Название магазина</p></div>
             <div class="desk"><p>Магазин работает с 10:00 до 22:00, без выходных<br>
                 Музей — с 10:00 до 19:00, понедельник выходной<br>
                 Москва, ул. Тимура Фрунзе, д. 11, стр. 13<br>
@@ -28,7 +28,7 @@
                     <p><a href="/marketing">Маркетинг</a></p>
                     <p><a href="/web">WEB</a></p>
                     <p><a href="/grapfik">Графика</a></p>
-                    <p><a href="/web">Все разделы</a></p>
+                    <p><a class="ellow" href="/web">Все разделы</a></p>
             </div>
     </navigation>
 
