--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <link rel = "stylesheet" type = "text / css" href = "reset.css">
-    <link href="css/style.css" rel="stylesheet">
+    <link rel = "stylesheet" type = "text / css" href = "css/reset.css">
+    <link href="css/style_catalog.css" rel="stylesheet">
     <title>Мой первый сайт</title>
 
 </head>
@@ -12,10 +12,10 @@
 
 <body>
 
-    <header class="container">
-        <div class="text">
+    <header class="container white">
+        <div>
             <div class="logo"><p>Logotip</p></div>
-            <div class="name"><p>Интернет магазин<br>Название магазина</p></div>
+            <h1>Интернет магазин<br>Название магазина</h1>
             <div class="desk"><p>Магазин работает с 10:00 до 22:00, без выходных<br>
                 Музей — с 10:00 до 19:00, понедельник выходной<br>
                 Москва, ул. Тимура Фрунзе, д. 11, стр. 13<br>
@@ -28,7 +28,7 @@
                     <p><a href="/marketing">Маркетинг</a></p>
                     <p><a href="/web">WEB</a></p>
                     <p><a href="/grapfik">Графика</a></p>
-                    <p><a class="ellow" href="/web">Все разделы</a></p>
+                    <p><a class="bc_ellow" href="/web">Все разделы</a></p>
             </div>
     </navigation>
 
