--- a/web.html
+++ b/web.html
@@ -22,8 +22,8 @@
 
 <main>
     <div>
-            <div class="osn_text">
-                <p>      Текст который понравится всем и вся, который уникальный и не повторяется где либо, который будет генерить
+            <div>
+                <p class="osn_text">      Текст который понравится всем и вся, который уникальный и не повторяется где либо, который будет генерить
                     трафик и приность немножеко удовольствия от его прочтения. Мне даже не верится что я это делаю. Текст который
                     понравится всем и вся, который уникальный и не повторяется где либо, который будет генерить трафик и приность
                     немножеко удовольствия от его прочтения. Мне даже не верится что я это делаю. Текст который понравится всем
@@ -32,7 +32,7 @@
 
                 <p class="zag">Красивое название раздела которое понравится многим</p>
 
-                <p>      Текст который понравится всем и вся, который уникальный и не повторяется где либо, который будет генерить
+                <p class="osn_text">      Текст который понравится всем и вся, который уникальный и не повторяется где либо, который будет генерить
                     трафик и приность немножеко удовольствия от его прочтения. Мне даже не верится что я это делаю. Текст который
                     понравится всем и вся, который уникальный и не повторяется где либо, который будет генерить трафик и приность
                     немножеко удовольствия от его прочтения. Мне даже не верится что я это делаю. Текст который понравится всем
@@ -41,7 +41,7 @@
 
                 <p class="zag">Красивое название раздела которое понравится многим</p>
 
-                <p>      Текст который понравится всем и вся, который уникальный и не повторяется где либо, который будет генерить
+                <p class="osn_text">      Текст который понравится всем и вся, который уникальный и не повторяется где либо, который будет генерить
                     трафик и приность немножеко удовольствия от его прочтения. Мне даже не верится что я это делаю. Текст который
                     понравится всем и вся, который уникальный и не повторяется где либо, который будет генерить трафик и приность
                     немножеко удовольствия от его прочтения. Мне даже не верится что я это делаю. Текст который понравится всем
@@ -50,7 +50,7 @@
 
                 <p class="zag">Красивое название раздела которое понравится многим</p>
 
-                <p>      Текст который понравится всем и вся, который уникальный и не повторяется где либо, который будет генерить
+                <p class="osn_text">      Текст который понравится всем и вся, который уникальный и не повторяется где либо, который будет генерить
                     трафик и приность немножеко удовольствия от его прочтения. Мне даже не верится что я это делаю. Текст который
                     понравится всем и вся, который уникальный и не повторяется где либо, который будет генерить трафик и приность
                     немножеко удовольствия от его прочтения. Мне даже не верится что я это делаю. Текст который понравится всем
@@ -59,7 +59,7 @@
 
                 <p class="zag">Красивое название раздела которое понравится многим</p>
 
-                <p>      Текст который понравится всем и вся, который уникальный и не повторяется где либо, который будет генерить
+                <p class="osn_text">      Текст который понравится всем и вся, который уникальный и не повторяется где либо, который будет генерить
                     трафик и приность немножеко удовольствия от его прочтения. Мне даже не верится что я это делаю. Текст который
                     понравится всем и вся, который уникальный и не повторяется где либо, который будет генерить трафик и приность
                     немножеко удовольствия от его прочтения. Мне даже не верится что я это делаю. Текст который понравится всем
@@ -90,18 +90,18 @@
 </main>
 
 
-    <footer class="container">
-        <div class="smm flex_centr">
-            <img src="image/vk.png" alt="vk">
-            <img src="image/vk.png" alt="vk">
-            <img src="image/vk.png" alt="vk">
-            <img src="image/vk.png" alt="vk">
-        </div>
-        <div class="info">
-            <p>ИП Иванов Иван Иванович</p>
-            <p>ОГРН 123456789012345</p>
-            <p>ИНН 6268293456</p>
-        </div>
-    </footer>
+<footer class="container">
+    <div class="smm flex_centr">
+        <img src="image/vk.png" alt="vk">
+        <img src="image/vk.png" alt="vk">
+        <img src="image/vk.png" alt="vk">
+        <img src="image/vk.png" alt="vk">
+    </div>
+    <div class="info">
+        <p>ИП Иванов Иван Иванович</p>
+        <p>ОГРН 123456789012345</p>
+        <p>ИНН 6268293456</p>
+    </div>
+</footer>
 </body>
 </html>
