--- a/index.html
+++ b/index.html
@@ -1,14 +1,21 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
     <meta charset="UTF-8">
-    <link rel = "stylesheet" type = "text / css" href = "css/reset.css">
-    <link href="css/style_catalog.css" rel="stylesheet">
+
+    <link rel = "stylesheet" type = "text/css" href = "css/reset.css">
+    <link rel="stylesheet"   type = "text/css" href="css/style_catalog.css">
+    <link rel="shortcut icon" type="image/x-icon" href="image/favicon.ico">
+
     <title>Мой первый сайт</title>
-
+    <meta name="keywords" content="купить подарок, купить сувениры, интернет магазин подарков, сувениры оптом, интернет
+    магазин сувениров, подарки оптом, купить сувениры оптом, купить подарки оптом, подарки москва, сувениры москва">
+    <meta name="description" content="Интернет магазин Сима-ленд - купить сувениры и подарки оптом и в розницу.
+    Огромный каталог - более 500 000 наименований для поставок в Москву, Екатеринбург, Санкт-Петербург, по России,
+    странам СНГ и Европе">
+    <link href="https://www.sima-land.ru/" rel="canonical">
 </head>
-
-
 
 <body>
 
@@ -26,7 +33,7 @@
     <navigation class="container">
             <div class="menu flex_centr">
                     <p><a href="/marketing">Маркетинг</a></p>
-                    <p><a href="/web">WEB</a></p>
+                    <p><a href="yandex/web">WEB</a></p>
                     <p><a href="/grapfik">Графика</a></p>
                     <p><a class="bc_ellow" href="/web">Все разделы</a></p>
             </div>
