--- a/web.html
+++ b/web.html
@@ -1,29 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <link rel = "stylesheet" type = "text / css" href = "css/reset.css">
     <link href="css/style_page.css" rel="stylesheet">
+    <link rel="shortcut icon" type="image/x-icon" href="image/favicon.ico">
+
     <title>Web</title>
+    <meta name="keywords" content="купить подарок, купить сувениры, интернет магазин подарков, сувениры оптом, интернет
+    магазин сувениров, подарки оптом, купить сувениры оптом, купить подарки оптом, подарки москва, сувениры москва">
+    <meta name="description" content="Интернет магазин Сима-ленд - купить сувениры и подарки оптом и в розницу.
+    Огромный каталог - более 500 000 наименований для поставок в Москву, Екатеринбург, Санкт-Петербург, по России,
+    странам СНГ и Европе">
+    <link href="https://www.sima-land.ru/" rel="canonical">
 </head>
+
 <body>
 <navigation class="container">
     <div class="menu flex_centr">
         <p><a href="/marketing">Маркетинг</a></p>
-        <p><a class="bc_ellow" href="/web">WEB</a></p>
+        <p><a class="bc_ellow" href="web">WEB</a></p>
         <p><a href="/grapfik">Графика</a></p>
         <p><a href="/web">Все разделы</a></p>
     </div>
 </navigation>
 
     <header class="container">
+        <div class="flex_between shapka">
+            <div>
+                <p class="data data_up grey">18.03.2019</p>
+            </div>
+            <div class="flex">
+            <p class="shild br_red">Информационные технологии</p>
+            <p class="shild br_aqua">ПО</p>
+            <p class="shild br_green">Разработка</p>
+            </div>
+        </div>
         <h1>Красивое название статьи с SEO оптимизацией<br>и другими плюшками</h1>
     </header>
 
 <main>
     <div>
             <div>
-                <p class="osn_text">      Текст который понравится всем и вся, который уникальный и не повторяется где либо, который будет генерить
+                <p class="osn_text">Текст который понравится всем и вся, который уникальный и не повторяется где либо, который будет генерить
+                    трафик и приность немножеко удовольствия от его прочтения. Мне даже не верится что я это делаю. Текст который
+                    понравится всем и вся, который уникальный и не повторяется где либо, который будет генерить трафик и приность
+                    немножеко удовольствия от его прочтения. Мне даже не верится что я это делаю. Текст который понравится всем
+                    и вся, который уникальный и не повторяется где либо, который будет генерить трафик и приность немножеко
+                    удовольствия от его прочтения. Мне даже не верится что я это делаю. </p>
+
+                <p class="zag">Красивое название раздела которое понравится многим</p>
+
+                <p class="osn_text">Текст который понравится всем и вся, который уникальный и не повторяется где либо, который будет генерить
                     трафик и приность немножеко удовольствия от его прочтения. Мне даже не верится что я это делаю. Текст который
                     понравится всем и вся, который уникальный и не повторяется где либо, который будет генерить трафик и приность
                     немножеко удовольствия от его прочтения. Мне даже не верится что я это делаю. Текст который понравится всем
@@ -56,15 +85,7 @@
                     немножеко удовольствия от его прочтения. Мне даже не верится что я это делаю. Текст который понравится всем
                     и вся, который уникальный и не повторяется где либо, который будет генерить трафик и приность немножеко
                     удовольствия от его прочтения. Мне даже не верится что я это делаю. </p>
-
-                <p class="zag">Красивое название раздела которое понравится многим</p>
-
-                <p class="osn_text">      Текст который понравится всем и вся, который уникальный и не повторяется где либо, который будет генерить
-                    трафик и приность немножеко удовольствия от его прочтения. Мне даже не верится что я это делаю. Текст который
-                    понравится всем и вся, который уникальный и не повторяется где либо, который будет генерить трафик и приность
-                    немножеко удовольствия от его прочтения. Мне даже не верится что я это делаю. Текст который понравится всем
-                    и вся, который уникальный и не повторяется где либо, который будет генерить трафик и приность немножеко
-                    удовольствия от его прочтения. Мне даже не верится что я это делаю. </p>
+                <p class="data data_down grey">18.03.2019</p>
             </div>
 
             <div class="offers">
