--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <navigation class="container">
             <div class="menu flex_centr">
                     <p><a href="/marketing">Маркетинг</a></p>
-                    <p><a href="yandex/web">WEB</a></p>
+                    <p><a href="web">WEB</a></p>
                     <p><a href="/grapfik">Графика</a></p>
                     <p><a class="bc_ellow" href="/web">Все разделы</a></p>
             </div>
